# agentic-code-audit

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/sandbox/: Dockerfile
docs/: ARCHITECTURE.md  DeepAudit对比与重构说明.md  FULL_DEVELOPMENT_PLAN.md  MCP.md  NEXT_OPTIMIZATION_PLAN.md  README.md  REFACTOR_SPEC.md  USAGE.md  Web界面说明.md  使用说明.md  基于大模型智能体的开源项目安全审计与漏洞研究技术调研报告.html  基于大模型智能体的开源项目安全审计与漏洞研究技术调研报告.md  完整开发实施文档.md  架构.md  漏洞挖掘与验证Agent架构重构方案.md  漏洞挖掘质量优化规划.md  系统架构.md  系统综合改进方案.md  路线图.md  重构完整化改进说明.md
examples/vulnerable-python/: app.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
rules/common/: cwe_mapping.yml
rules/cpp/: dangerous_functions.yml  sanitizers.yml  sources.yml
rules/javascript/: dangerous_apis.yml
rules/python/: dangerous_apis.yml
scripts/: analyze_report_quality.py  install_tools.ps1  verify_phase0.py
skills/source-code-audit/: SKILL.md
src/agentic_code_audit/: __init__.py  audit_budget.py  cli.py  code_graph.py  codeql.py  config.py  dataflow.py  evidence_graph.py  inputs.py  interprocedural.py  llm.py  mcp_server.py  mining_debug.py  models.py  normalizer.py  path_policy.py  pipeline.py  report_quality.py  reporting.py  rules.py  (+2 more)
tests/: test_code_graph.py  test_evidence_graph.py  test_llm_triage.py  test_path_policy.py  test_report_quality.py  test_signal_routing.py  test_smoke.py  test_variable_dataflow.py
项目文档/: DeepAudit对比与重构说明.md  下一阶段全面优化方案.md  开发说明.md  系统架构.md  重构完整化改进说明.md
(+28 files in other folders)
