[project]
name = "agentic-code-audit"
version = "0.1.0"
description = "Agentic source code security audit and verification system."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "agentic-code-audit contributors" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]
mcp = [
  "mcp>=1.0.0"
]

[project.scripts]
agentic-code-audit = "agentic_code_audit.cli:main"
agentic-code-audit-web = "agentic_code_audit.server:main"
agentic-code-audit-backend = "agentic_code_audit.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_code_audit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
